--- a/index.html
+++ b/index.html
@@ -1,123 +1,34 @@
 <!doctype html>
 <html lang="id">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>CBT Trap – Built Video</title>
-
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>CBT Trap – SNBT TPS</title>
 <style>
-body{
-  margin:0;
-  height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:#020617;
-  font-family:system-ui;
-}
-
-.phone{
-  width:240px;
-  height:480px;
-  background:#020617;
-  border-radius:28px;
-  overflow:hidden;
-  position:relative;
-  box-shadow:0 40px 90px rgba(0,0,0,.8);
-}
-
-/* ===== BASE ===== */
-.layer{
-  position:absolute;
-  width:90%;
-  left:5%;
-  background:#020617;
-  border:1px solid #334155;
-  border-radius:12px;
-  padding:10px;
-  color:#e5e7eb;
-  font-size:13px;
-  opacity:0;
-  transform:translateY(20px) scale(.96);
-  transition:.6s cubic-bezier(.22,.9,.22,1);
-}
-
-.show{
-  opacity:1;
-  transform:none;
-}
-
-/* ===== HOOK ===== */
-.hook{
-  top:18px;
-  text-align:center;
-  font-size:15px;
-  font-weight:700;
-  letter-spacing:.5px;
-  opacity:0;
-  transition:.4s;
-}
-
-/* ===== SOAL ===== */
-.q1{top:90px}
-.q2{top:140px}
-
-/* ===== RATIONALE ===== */
-.rationale{
-  top:220px;
-  border-color:#38bdf8;
-}
-
-/* ===== REPLAY ===== */
-.replay{
-  bottom:16px;
-  text-align:center;
-  font-size:11px;
-  opacity:0;
-  transition:.4s;
-}
+body{margin:0;height:100vh;display:flex;justify-content:center;align-items:center;background:#020617;font-family:system-ui}
+.phone{width:240px;height:480px;border-radius:28px;background:#020617;overflow:hidden;position:relative;box-shadow:0 40px 90px rgba(0,0,0,.8)}
+.hook{position:absolute;top:18px;width:100%;text-align:center;color:#e5e7eb;font-weight:700;opacity:0;transition:.4s}
+.layer{position:absolute;left:5%;width:90%;padding:10px;border:1px solid #334155;border-radius:12px;color:#e5e7eb;background:#020617;opacity:0;transform:translateY(18px) scale(.96);transition:.6s cubic-bezier(.22,.9,.22,1)}
+.show{opacity:1;transform:none}
+.q1{top:90px}.q2{top:140px}
+.r{top:230px;border-color:#38bdf8}
+.u{position:absolute;bottom:16px;width:100%;text-align:center;color:#e5e7eb;font-size:11px;opacity:0;transition:.4s}
 </style>
 </head>
-
 <body>
 <div class="phone">
-
-  <div class="hook" id="hook">CBT Trap</div>
-
-  <div class="layer q1" id="q1">
-    Jika 3x + 5 = 20
-  </div>
-
-  <div class="layer q2" id="q2">
-    Maka nilai x adalah…
-  </div>
-
-  <div class="layer rationale" id="r">
-    Kesalahan paling sering bukan di hitungan,
-    tapi di cara membaca.
-  </div>
-
-  <div class="replay" id="u">(ulangi)</div>
-
+  <div class="hook" id="h">CBT Trap</div>
+  <div class="layer q1" id="q1">TPS: Jika A &gt; B dan B &gt; C</div>
+  <div class="layer q2" id="q2">Pernyataan mana yang pasti benar?</div>
+  <div class="layer r" id="r">Yang salah sering terjadi karena lompat asumsi.</div>
+  <div class="u" id="u">(ulangi)</div>
 </div>
-
 <script>
-/* HOOK – delta frame cepat */
-setTimeout(()=>hook.style.opacity=1,150);
-
-/* SOAL MASUK */
-setTimeout(()=>q1.classList.add("show"),500);
-setTimeout(()=>q2.classList.add("show"),900);
-
-/* RATIONALE */
+setTimeout(()=>h.style.opacity=1,120);
+setTimeout(()=>q1.classList.add("show"),420);
+setTimeout(()=>q2.classList.add("show"),820);
 setTimeout(()=>r.classList.add("show"),3200);
-
-/* REPLAY (SETELAH SEMUA SELESAI) */
 setTimeout(()=>u.style.opacity=.4,5200);
-
-/* LOOP NATURAL */
 setTimeout(()=>location.reload(),6400);
 </script>
-
 </body>
 </html>
