--- a/index.html
+++ b/index.html
@@ -2,31 +2,31 @@
 <html lang="id">
 <head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>CBT Trap – SNBT TPS</title>
+<title>CBT Trap – Literasi</title>
 <style>
 body{margin:0;height:100vh;display:flex;justify-content:center;align-items:center;background:#020617;font-family:system-ui}
 .phone{width:240px;height:480px;border-radius:28px;background:#020617;overflow:hidden;position:relative;box-shadow:0 40px 90px rgba(0,0,0,.8)}
 .hook{position:absolute;top:18px;width:100%;text-align:center;color:#e5e7eb;font-weight:700;opacity:0;transition:.4s}
 .layer{position:absolute;left:5%;width:90%;padding:10px;border:1px solid #334155;border-radius:12px;color:#e5e7eb;background:#020617;opacity:0;transform:translateY(18px) scale(.96);transition:.6s cubic-bezier(.22,.9,.22,1)}
 .show{opacity:1;transform:none}
-.q1{top:90px}.q2{top:140px}
-.r{top:230px;border-color:#38bdf8}
+.p1{top:92px}.p2{top:152px}
+.r{top:250px;border-color:#38bdf8}
 .u{position:absolute;bottom:16px;width:100%;text-align:center;color:#e5e7eb;font-size:11px;opacity:0;transition:.4s}
 </style>
 </head>
 <body>
 <div class="phone">
   <div class="hook" id="h">CBT Trap</div>
-  <div class="layer q1" id="q1">TPS: Jika A &gt; B dan B &gt; C</div>
-  <div class="layer q2" id="q2">Pernyataan mana yang pasti benar?</div>
-  <div class="layer r" id="r">Yang salah sering terjadi karena lompat asumsi.</div>
+  <div class="layer p1" id="p1">Literasi: Ide pokok bukan kalimat pertama.</div>
+  <div class="layer p2" id="p2">Baca relasi antar kalimat.</div>
+  <div class="layer r" id="r">Kesalahan ada di konteks, bukan kosakata.</div>
   <div class="u" id="u">(ulangi)</div>
 </div>
 <script>
 setTimeout(()=>h.style.opacity=1,120);
-setTimeout(()=>q1.classList.add("show"),420);
-setTimeout(()=>q2.classList.add("show"),820);
-setTimeout(()=>r.classList.add("show"),3200);
+setTimeout(()=>p1.classList.add("show"),480);
+setTimeout(()=>p2.classList.add("show"),900);
+setTimeout(()=>r.classList.add("show"),3300);
 setTimeout(()=>u.style.opacity=.4,5200);
 setTimeout(()=>location.reload(),6400);
 </script>
