--- a/index.html
+++ b/index.html
@@ -2,31 +2,31 @@
 <html lang="id">
 <head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>CBT Trap – Literasi</title>
+<title>CBT Trap – ASN</title>
 <style>
 body{margin:0;height:100vh;display:flex;justify-content:center;align-items:center;background:#020617;font-family:system-ui}
 .phone{width:240px;height:480px;border-radius:28px;background:#020617;overflow:hidden;position:relative;box-shadow:0 40px 90px rgba(0,0,0,.8)}
 .hook{position:absolute;top:18px;width:100%;text-align:center;color:#e5e7eb;font-weight:700;opacity:0;transition:.4s}
 .layer{position:absolute;left:5%;width:90%;padding:10px;border:1px solid #334155;border-radius:12px;color:#e5e7eb;background:#020617;opacity:0;transform:translateY(18px) scale(.96);transition:.6s cubic-bezier(.22,.9,.22,1)}
 .show{opacity:1;transform:none}
-.p1{top:92px}.p2{top:152px}
-.r{top:250px;border-color:#38bdf8}
+.i1{top:98px}.i2{top:150px}
+.r{top:240px;border-color:#38bdf8}
 .u{position:absolute;bottom:16px;width:100%;text-align:center;color:#e5e7eb;font-size:11px;opacity:0;transition:.4s}
 </style>
 </head>
 <body>
 <div class="phone">
   <div class="hook" id="h">CBT Trap</div>
-  <div class="layer p1" id="p1">Literasi: Ide pokok bukan kalimat pertama.</div>
-  <div class="layer p2" id="p2">Baca relasi antar kalimat.</div>
-  <div class="layer r" id="r">Kesalahan ada di konteks, bukan kosakata.</div>
+  <div class="layer i1" id="i1">ASN: “Kecuali” mengubah seluruh jawaban.</div>
+  <div class="layer i2" id="i2">Cari kata perintah dulu.</div>
+  <div class="layer r" id="r">Yang terlewat biasanya satu kata.</div>
   <div class="u" id="u">(ulangi)</div>
 </div>
 <script>
 setTimeout(()=>h.style.opacity=1,120);
-setTimeout(()=>p1.classList.add("show"),480);
-setTimeout(()=>p2.classList.add("show"),900);
-setTimeout(()=>r.classList.add("show"),3300);
+setTimeout(()=>i1.classList.add("show"),460);
+setTimeout(()=>i2.classList.add("show"),860);
+setTimeout(()=>r.classList.add("show"),3200);
 setTimeout(()=>u.style.opacity=.4,5200);
 setTimeout(()=>location.reload(),6400);
 </script>
