--- a/index.html
+++ b/index.html
@@ -1,140 +1,34 @@
-<!doctype html>
-<html lang="id">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>CBT Hybrid</title>
-
+<!doctype html><html lang="id"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>CBT Hybrid 01</title>
 <style>
-body{
-  margin:0;
-  height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:#020617;
-  font-family:system-ui;
-}
-
-.phone{
-  width:260px;
-  height:500px;
-  border-radius:30px;
-  overflow:hidden;
-  position:relative;
-  background:#000;
-  box-shadow:0 40px 90px rgba(0,0,0,.85);
-}
-
-/* video */
-video{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-}
-
-/* overlay */
-.overlay{
-  position:absolute;
-  inset:0;
-  pointer-events:none;
-}
-
-/* hook */
-.hook{
-  position:absolute;
-  top:14px;
-  width:100%;
-  text-align:center;
-  font-size:13px;
-  font-weight:700;
-  color:#e5e7eb;
-  opacity:0;
-  transition:.4s;
-}
-
-/* cascade */
-.book{
-  position:absolute;
-  left:7%;
-  width:86%;
-  padding:10px 12px;
-  border-radius:14px;
-  background:rgba(2,6,23,.75);
-  border:1px solid #334155;
-  color:#e5e7eb;
-  font-size:13px;
-  opacity:0;
-  transform:translateY(-8px) scale(.97);
-  transition:.6s cubic-bezier(.22,.9,.22,1);
-  backdrop-filter:blur(6px);
-}
+body{margin:0;height:100vh;display:flex;justify-content:center;align-items:center;background:#020617;font-family:system-ui}
+.phone{width:260px;height:500px;border-radius:30px;overflow:hidden;position:relative;background:#000;box-shadow:0 40px 90px rgba(0,0,0,.85)}
+video{width:100%;height:100%;object-fit:cover}
+.overlay{position:absolute;inset:0;pointer-events:none}
+.hook{top:14px;position:absolute;width:100%;text-align:center;font-size:13px;font-weight:700;color:#e5e7eb;opacity:0;transition:.4s}
+.book{position:absolute;left:7%;width:86%;padding:10px 12px;border-radius:14px;background:rgba(2,6,23,.75);border:1px solid #334155;color:#e5e7eb;font-size:13px;opacity:0;transform:translateY(-8px) scale(.97);transition:.6s cubic-bezier(.22,.9,.22,1);backdrop-filter:blur(6px)}
 .show{opacity:1;transform:none}
-
-.b1{top:90px}
-.b2{top:140px}
-.b3{top:190px}
-.b4{
-  top:260px;
-  border-color:#38bdf8;
-}
-
-/* repeat */
-.repeat{
-  position:absolute;
-  bottom:12px;
-  width:100%;
-  text-align:center;
-  font-size:11px;
-  color:#94a3b8;
-  opacity:0;
-  transition:.4s;
-}
-</style>
-</head>
-
-<body>
+.b1{top:90px}.b2{top:140px}.b3{top:190px}
+.b4{top:260px;border-color:#38bdf8}
+.repeat{position:absolute;bottom:12px;width:100%;text-align:center;font-size:11px;color:#94a3b8;opacity:0;transition:.4s}
+</style></head><body>
 <div class="phone">
-
-  <!-- VIDEO DEMO -->
-  <video src="demo.mp4" autoplay muted loop></video>
-
-  <!-- OVERLAY -->
-  <div class="overlay">
-    <div class="hook" id="h">CBT Learning</div>
-
-    <div class="book b1" id="b1">
-      Peserta fokus ke soal.
-    </div>
-
-    <div class="book b2" id="b2">
-      Tapi melewatkan instruksi.
-    </div>
-
-    <div class="book b3" id="b3">
-      Di sinilah CBT menjebak.
-    </div>
-
-    <div class="book b4" id="b4">
-      Menang CBT = urutan baca.
-    </div>
-
-    <div class="repeat" id="r">(ulangi)</div>
-  </div>
-
-</div>
-
+<video src="demo.mp4" autoplay muted loop></video>
+<div class="overlay">
+<div class="hook" id="h">SNBT TPS</div>
+<div class="book b1" id="b1">Soal terlihat mudah.</div>
+<div class="book b2" id="b2">Langsung dihitung.</div>
+<div class="book b3" id="b3">Instruksi terlewat.</div>
+<div class="book b4" id="b4">CBT = urutan baca.</div>
+<div class="repeat" id="r">(ulangi)</div>
+</div></div>
 <script>
 setTimeout(()=>h.style.opacity=1,120)
-
 setTimeout(()=>b1.classList.add("show"),600)
 setTimeout(()=>b2.classList.add("show"),1200)
 setTimeout(()=>b3.classList.add("show"),1800)
 setTimeout(()=>b4.classList.add("show"),3200)
-
 setTimeout(()=>r.style.opacity=.4,6000)
 setTimeout(()=>location.reload(),7400)
-</script>
-
-</body>
-</html>
+</script></body></html>
